--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <script src="//at.alicdn.com/t/font_3018109_0sugcpskoq4q.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>KeeNote-Admin</title>
   </head>
   <body>
     <div id="root"></div>
